# cubeofrubik

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: package-tests.yml  python-package.yml
cubeofrubik/: RubiksCube.py  RubiksCubeAlgorithms.py  __init__.py  main.py
docs/: conf.py  cubeofrubik.rst  index.rst  modules.rst  rubikscube.rst  tests.rst
rubikscube/: Color.py  RubiksCube.py  RubiksCubeAlgorithms.py  RubiksCubeInterface.py  main.py
src/: RubiksCube.py  RubiksCubeAlgorithms.py  RubiksCubeInterface.py
src/rubikscube/: main.py
test/: test_RubikCube.py
tests/: __init__.py  test_RubikCube.py  test_RubiksCube.py
