[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubeofrubik"
version = "0.0.1"
authors = [
  { name="Breno Levi", email="brenolevi@ymail.com" },
]
description = "A rubiks cube model and solver"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["rubik's cube", "layer-by-layer", "singmaster", "puzzle", "solver"]

[project.urls]
"Homepage" = "https://github.com/blevic/rubikscube"
"Bug Tracker" = "https://github.com/blevic/rubikscube/issues"