[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubeofrubik"
version = "1.0.0"
authors = [
  { name="Breno Levi", email="blevic@proton.me" },
]
description = "A Rubik's cube model and solver"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "kociemba >= 1.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["rubik's cube", "layer-by-layer", "singmaster", "puzzle", "solver", "cube of rubik", "kociemba"]

[project.urls]
"Homepage" = "https://github.com/blevic/cubeofrubik"
"Bug Tracker" = "https://github.com/blevic/cubeofrubik/issues"